test/fails/bad_types/bad_add2.lgl
void main() {
    int x = 5;
    vec2 v = [1.0, 2.0];
    print x + v;
}